src/assets/tailwind.css
html, body, #app {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  max-width: 100%;
  overflow-x: hidden;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-bg text-text font-area w-full;
  }
}

@layer components {
  .basket {
    @apply p-2 bg-bg rounded-l-lg text-text my-10 max-w-md ml-auto w-auto;
  }

  .user-layout {
    @apply flex items-center justify-center min-h-screen w-full bg-bg;
  }

  .user-layout-inner{
    @apply flex w-4/5 h-4/5 max-h-[800px];
  }

  .user-display-card {
    @apply bg-[#E8E8E8] text-textAlt rounded-xl p-6 relative
           transition-all duration-300 ease-in-out flex-grow overflow-hidden;
    min-height: 0;
  }

  .user-display-card.collapsed {
    width: 100%;
  }

  .user-button {
    @apply inline-block bg-[#2F3C2C] text-white text-lg font-semibold px-6 py-3 rounded-lg shadow-md hover:bg-[#3E503B] transition duration-300 ease-in-out;
  }

  
  .user-sidebar {
    @apply flex flex-col justify-center gap-8 p-4 transition-[width] duration-300 ease-in-out max-h-[800px];
    width: 20%;
  }

  .user-sidebar.collapsed {
    width: 60px; 
  }

  .user-sidebar-button{
    @apply flex items-center bg-white  rounded-lg w-full transition-all duration-300 ease-in-out overflow-hidden min-w-[50px] min-h-[80px] max-w-[200px] h-[10%]
  }

  .user-sidebar-button.active {
    @apply max-w-[1000px] w-[200%] bg-[#E8E8E8];
    width: 20vw;
  }

  .user-sidebar-link {
    @apply flex w-full h-full pl-4 items-center transition-all duration-300 ease-in-out overflow-hidden min-w-[50px]  hover:text-black;
  }

  .user-sidebar-text {
    @apply block whitespace-normal break-words transition-opacity duration-100 ease-in-out pl-[20px] pr-[20px];
    opacity: 1;
    width: 100px;
    transition-delay: 0.2s;
  }

  .user-sidebar.collapsed .user-sidebar-text {
    opacity: 0;
    transition-delay: 0s;
  }

  .user-sidebar-icon {
    @apply w-5 h-5 flex-shrink-0 flex-grow-0;
  }
}

